--- a/danmaku-sender/.gitignore
+++ b/danmaku-sender/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+/src/main/resources/*
+!/src/main/resources/application.yml
 
 ### STS ###
 .apt_generated
